--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "react-intl": "^2.7.2"
+    "react-intl": "^2.7.2",
+    "prop-types": "latest"
   }
 }
