--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "coligo-frontend-task",
+  "homepage": "http://mustamohamed.github.io/Dashboard-React",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,7 +33,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "react-intl": "^2.7.2",
-    "prop-types": "latest"
+    "gh-pages": "^2.0.1",
+    "prop-types": "latest",
+    "react-intl": "^2.7.2"
   }
 }
